--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "generate:media": "node scripts/generateMedia.js",
-  "dev": "npm run generate:media && vite"
+    "type": "ignore",
+    "generate:media": "node scripts/generateMedia.js",
+    "dev:start": "npm run generate:media && vite"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.0.5",
